Update pip command with versions
My code doesn't run with the latest versions, so install the versions I
have locally.

TODO: update my code

--- a/captum-multiple.ipynb
+++ b/captum-multiple.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#@title foo\n",
-    "!pip install transformers captum plotnine"
+    "!pip install transformers==4.1.1 captum==0.3.0 plotnine"
    ]
   },
   {
@@ -504,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
