--- a/attention_viz.ipynb
+++ b/attention_viz.ipynb
@@ -27,7 +27,7 @@
     "from plotnine import *\n",
     "\n",
     "import torch\n",
-    "from transformers import AutoModelForMaskedLM, AutoTokenizer\n",
+    "from transformers import AutoModel, AutoTokenizer\n",
     "\n",
     "plotnine.options.figure_size = (12, 12)"
    ]
@@ -54,7 +54,7 @@
     "transformer = \"bert-base-cased\"\n",
     "#transformer = \"twmkn9/bert-base-uncased-squad2\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(transformer)\n",
-    "model = AutoModelForMaskedLM.from_pretrained(transformer, output_attentions=True, output_hidden_states=True)\n",
+    "model = AutoModel.from_pretrained(transformer, output_attentions=True, output_hidden_states=True)\n",
     "model.to(device)\n",
     "model.eval()\n",
     "model.zero_grad()\n"
@@ -67,9 +67,9 @@
    "outputs": [],
    "source": [
     "sentences = [\n",
-    "    \"You will either win or [MASK] the game.\",\n",
-    "    \"Less is [MASK].\",\n",
-    "    \"The quick brown fox jumped over the [MASK] dog.\",\n",
+    "    \"You will either win or lose the game.\",\n",
+    "    \"Less is more.\",\n",
+    "    \"The quick brown fox jumped over the lazy dog.\",\n",
     "]\n",
     "input_dict = tokenizer(sentences, padding=True, return_tensors=\"pt\")\n",
     "for k, v in input_dict.items():\n",
