--- a/attention_viz.ipynb
+++ b/attention_viz.ipynb
@@ -208,7 +208,7 @@
     "# create a layer/head multiindex\n",
     "ix = pd.MultiIndex.from_arrays(\n",
     "    [\n",
-    "        np.repeat(np.arange(h) + 1,l),\n",
+    "        np.repeat(np.arange(l) + 1,h),\n",
     "        np.tile(np.arange(h) + 1, l)\n",
     "    ], \n",
     "    names=['layer', 'head'])"
@@ -237,7 +237,7 @@
    "outputs": [],
    "source": [
     "# calculate the median k per head\n",
-    "avg_k = pd.DataFrame(np.median(mr, axis=-1).flatten(), index=ix, columns=[\"value\"]).reset_index()\n",
+    "avg_k = pd.DataFrame(np.median(mr[:,:,unmasked], axis=-1).flatten(), index=ix, columns=[\"value\"]).reset_index()\n",
     "display(avg_k)"
    ]
   },
