--- a/attention_viz.ipynb
+++ b/attention_viz.ipynb
@@ -51,7 +51,9 @@
    "outputs": [],
    "source": [
     "#transformer = \"distilbert-base-cased\"\n",
-    "transformer = \"bert-base-cased\"\n",
+    "#transformer = \"gpt2\"\n",
+    "transformer = \"gpt2-medium\"\n",
+    "#transformer = \"gpt2-large\"\n",
     "#transformer = \"twmkn9/bert-base-uncased-squad2\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(transformer)\n",
     "model = AutoModel.from_pretrained(transformer, output_attentions=True, output_hidden_states=True)\n",
@@ -71,6 +73,14 @@
     "    \"Less is more.\",\n",
     "    \"The quick brown fox jumped over the lazy dog.\",\n",
     "]\n",
+    "\n",
+    "# gpt2 doesn't do padding, so invent a padding token\n",
+    "# this one was suggested by the error you get when trying\n",
+    "# to do masking below, but it shouldn't matter as the actual\n",
+    "# tokens get ignored by the attention mask anyway\n",
+    "if transformer in ['gpt2', 'gpt2-medium', 'gpt2-large']:\n",
+    "    tokenizer.pad_token = tokenizer.eos_token\n",
+    "\n",
     "input_dict = tokenizer(sentences, padding=True, return_tensors=\"pt\")\n",
     "for k, v in input_dict.items():\n",
     "    input_dict[k] = v.to(device)\n",
