Add a weighted distance version of the differences notebook

--- a/attention_viz-weighted_distance-diff.ipynb
+++ b/attention_viz-weighted_distance-diff.ipynb
@@ -3,12 +3,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "code_folding": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# @title foo\n",
+    "#@title foo\n",
     "#!pip install transformers==4.1.1 plotnine"
    ]
   },
@@ -37,7 +35,7 @@
     "\n",
     "from ahviz import create_indices, create_dataframe, filter_mask\n",
     "import torch\n",
-    "from transformers import AutoModel, AutoTokenizer"
+    "from transformers import AutoModel, AutoTokenizer\n"
    ]
   },
   {
@@ -58,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# uncomment this if you run into memory issues on the gpu\n",
+    "# uncomment to force CPU if you have a GPU but not enough memory to do what you want. it will be slow of course\n",
     "#device = torch.device(\"cpu\")"
    ]
   },
@@ -68,13 +66,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## transformer = \"distilbert-base-cased\"\n",
     "#transformer = \"bert-base-cased\"\n",
     "#transformer = \"gpt2\"\n",
     "#transformer = \"gpt2-medium\"\n",
     "transformer = \"gpt2-large\"\n",
     "#transformer = \"twmkn9/bert-base-uncased-squad2\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(transformer)\n",
-    "\n",
     "# gpt2 doesn't do padding, so invent a padding token\n",
     "# this one was suggested by the error you get when trying\n",
     "# to do masking below, but it shouldn't matter as the actual\n",
@@ -86,6 +84,18 @@
     "model.to(device)\n",
     "model.eval()\n",
     "model.zero_grad()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## data preparation\n",
+    "\n",
+    "Read in the prepared data. Included in the repository is a copy of the penn treebank sample that is included in the `nltk` python package, converted into plain text and split into sentences. But you can replace this with any\n",
+    "text file. Since the first thing we do is join all the text, it isn't even neccessary to split it into sentences.\n",
+    "\n",
+    "The script I used to create the file is `convert_corpus.py` in the repository"
    ]
   },
   {
@@ -124,16 +134,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# an example of a synthetic dataset\n",
-    "#dataset_b = pd.DataFrame([\"one two three four five six seven eight nine ten\"] * 100, columns=[\"line\"])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -159,12 +159,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "window_size = 50\n",
-    "step = 25\n",
-    "future = 0\n",
-    "\n",
-    "mask = torch.cat((torch.zeros(window_size - (step + future)), torch.ones(step), torch.zeros(future))).expand((100,-1))[0]\n",
-    "print(mask)"
+    "window_size = 25\n",
+    "step = 12\n",
+    "future = 0"
    ]
   },
   {
@@ -193,12 +190,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "mask = torch.cat((torch.zeros(window_size - (step + future)), torch.ones(step), torch.zeros(future))).expand((100,-1))[0]\n",
+    "print(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_batches(input_tensor:torch.Tensor, size: int, step: int, batch_size :int = 2):\n",
     "    input_ids = input_tensor.unfold(0, size, step)\n",
     "    tensor_dataset = torch.utils.data.TensorDataset(input_ids)\n",
     "    tensor_dataloader = torch.utils.data.DataLoader(tensor_dataset, batch_size=batch_size)\n",
     "    \n",
     "    return tensor_dataloader"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### distance functions\n",
+    "\n",
+    "This defines a few distance functions and their name. To select a different one, change the distance variable to one of the keys in the map. The name is used below in the diffence plot title."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "func_map = {\n",
+    "    'weighted': lambda d, w: d * w,\n",
+    "    'weighted absolute': lambda d, w: np.abs(d) * w,\n",
+    "    'weighted square': lambda d, w: np.square(d) * w,\n",
+    "}\n",
+    "\n",
+    "distance = \"weighted square\""
    ]
   },
   {
@@ -222,101 +253,44 @@
     "\n",
     "        att = np.array([a.cpu().detach().numpy() for a in output['attentions']])\n",
     "\n",
-    "        # sort all the attention softmax vectors in descending order\n",
-    "        sorted = np.take_along_axis(att, (-att).argsort(), axis=-1)\n",
-    "\n",
-    "        # add them up cumulatively\n",
-    "        cum = sorted.cumsum(axis=-1)\n",
-    "\n",
-    "        # determine which ones are below 0.9\n",
-    "        limit = np.where(cum < 0.9, True, False)\n",
-    "\n",
-    "        # count the ones below 0.9; k is that sum + 1\n",
-    "        k = limit.sum(axis=-1) + 1\n",
-    "\n",
-    "        # swap the 'head' and 'sentence' axes so we can more easily apply the attention mask\n",
-    "        ks = np.swapaxes(k, 1, 2)\n",
+    "        # swap the 'head' and 'sample' axes so they're in a more natural order\n",
+    "        att = np.swapaxes(att, 1, 2)\n",
+    "        ix = create_indices(att, sample=batch*att.shape[2])\n",
+    "        df = create_dataframe(att, ix)\n",
+    "        filtered = df[(df['from_token']>(window_size-(step+future))) & (df['from_token']<=(window_size-future)) ].copy()\n",
+    "        filtered['distance'] = (filtered['to_token'] - filtered['from_token'])\n",
+    "        filtered['sign'] = filtered['distance'] > 0\n",
+    "        filtered['weighted'] = func_map[distance](filtered['distance'], filtered['attention_fraction'])\n",
+    "        g = filtered.groupby(['layer', 'head', 'sample'])\n",
+    "        grouped = (g['weighted'].agg([np.mean, 'count'])).reset_index()\n",
     "\n",
     "        if data is None:\n",
-    "            data = ks\n",
+    "            data = grouped\n",
     "        else:\n",
-    "            data = np.concatenate([data, ks], axis=2)\n",
-    "    ix = create_indices(data, names=['layer', 'head', 'sample', 'from_token'])\n",
-    "    df = create_dataframe(data, ix)\n",
-    "    df['dataset'] = n\n",
+    "            data = pd.concat([data, grouped])\n",
+    "\n",
+    "    data['dataset'] = n\n",
+    "    \n",
     "    if result is None:\n",
-    "        result = df\n",
+    "        result = data\n",
     "    else:\n",
-    "        result = pd.concat([result, df])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "filtered = result[(result['from_token']>(window_size-(step+future))) & (result['from_token']<=(window_size-future)) ].rename(columns={'attention_fraction': \"value\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "avg_k = filtered.groupby(['dataset', 'layer', 'head']).agg(avg_k = pd.NamedAgg('value', np.median)).reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pivoted = avg_k.pivot(index=['layer', 'head'], columns='dataset', values=\"avg_k\").reset_index()\n",
-    "pivoted['diff'] = pivoted[0] - pivoted[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "fig, axes = matplotlib.pyplot.subplots(1, 3, figsize=(16, 6), sharey=True)\n",
-    "fig.suptitle('average K per head for the two datasets, and the difference per head')\n",
+    "        result = pd.concat([result, data])\n",
     "\n",
-    "seaborn.heatmap(ax=axes[0], data=avg_k[avg_k['dataset'] == 0].pivot('layer', 'head', \"avg_k\"), cmap=seaborn.light_palette(\"seagreen\", as_cmap=True))\n",
-    "axes[0].set_title(\"dataset A\")\n",
-    "\n",
-    "seaborn.heatmap(ax=axes[1], data=pivoted.pivot(['layer'], 'head', 'diff'), cmap=seaborn.color_palette(\"coolwarm\", as_cmap=True))\n",
-    "axes[1].set_title(\"difference\")\n",
-    "\n",
-    "seaborn.heatmap(ax=axes[2], data=avg_k[avg_k['dataset'] == 1].pivot('layer', 'head', \"avg_k\"), cmap=seaborn.light_palette(\"seagreen\", as_cmap=True))\n",
-    "axes[2].set_title(\"dataset B\")\n",
-    "\n",
-    "matplotlib.pyplot.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "avg_k.pivot(['dataset','layer'], 'head', \"avg_k\")"
+    "df = result.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### To replicate the plot in the hopfield network paper better, add a `sorted_head` column just so we can plot the attention heads per layer sorted from small to large k"
+    "## getting the data ready to plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### calculate the weighted distances and their mean per head"
    ]
   },
   {
@@ -325,7 +299,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d, l, h = avg_k['dataset'].max() + 1, avg_k['layer'].max(), avg_k['head'].max()\n",
+    "g = df.groupby(['dataset', 'layer', 'head'])\n",
+    "avg_dist = (g['mean'].mean()).reset_index().round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pivoted = avg_dist.pivot(index=['layer', 'head'], columns='dataset', values=\"mean\").reset_index()\n",
+    "pivoted['diff'] = pivoted[0] - pivoted[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d, l, h = avg_dist['dataset'].max() + 1, avg_dist['layer'].max(), avg_dist['head'].max()\n",
     "print(d,l,h)"
    ]
   },
@@ -335,26 +329,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorted_avg_k = avg_k.sort_values([\"dataset\", \"layer\", \"avg_k\"]) \n",
-    "sorted_avg_k['sorted_head'] = np.tile(np.tile(np.arange(h) + 1, l), d)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axes = matplotlib.pyplot.subplots(1, 2, figsize=(20, 12), sharey=True)\n",
-    "fig.suptitle('average K per head for two datasets, with the heads sorted per layer')\n",
-    "\n",
-    "seaborn.heatmap(ax=axes[0], data=sorted_avg_k[sorted_avg_k['dataset'] == 0].pivot('layer', 'sorted_head', \"avg_k\"), cmap=seaborn.light_palette(\"seagreen\", as_cmap=True))\n",
-    "axes[0].set_title(\"dataset A\")\n",
-    "\n",
-    "seaborn.heatmap(ax=axes[1], data=sorted_avg_k[sorted_avg_k['dataset'] == 1].pivot('layer', 'sorted_head', \"avg_k\"), cmap=seaborn.light_palette(\"seagreen\", as_cmap=True))\n",
-    "axes[1].set_title(\"dataset B\")\n",
-    "\n",
-    "matplotlib.pyplot.show()\n"
+    "sorted_avg_dist = avg_dist.sort_values([\"dataset\", \"layer\", \"mean\"]) \n",
+    "sorted_avg_dist['sorted_head'] = np.tile(np.tile(np.arange(h) + 1, l), d)\n"
    ]
   },
   {
@@ -364,16 +340,98 @@
    "outputs": [],
    "source": [
     "# merge this sorted_head column into the original data too\n",
-    "data_sh = filtered.merge(sorted_avg_k[['dataset', 'layer', 'head', 'sorted_head']], on=[\"dataset\", \"layer\", \"head\"])"
+    "data_sh = df.merge(sorted_avg_dist[['dataset', 'layer', 'head', 'sorted_head']], on=[\"dataset\", \"layer\", \"head\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## More Plots\n",
+    "## plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Average distances and the difference between the two datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = matplotlib.pyplot.subplots(1, 3, figsize=(16, 6), sharey=True)\n",
+    "fig.suptitle(f'average {distance} distance per head for the two datasets, and the difference per head')\n",
     "\n",
-    "## first in the natural order of the layers/heads"
+    "seaborn.heatmap(\n",
+    "        ax=axes[0],\n",
+    "        data=avg_dist[avg_dist['dataset'] == 0].pivot('layer', 'head', \"mean\"),\n",
+    "        cmap=seaborn.light_palette(\"seagreen\", as_cmap=True)\n",
+    "    )\n",
+    "axes[0].set_title(\"dataset A\")\n",
+    "\n",
+    "seaborn.heatmap(\n",
+    "        ax=axes[1],\n",
+    "        data=pivoted.pivot(['layer'], 'head', 'diff'),\n",
+    "        cmap=seaborn.color_palette(\"coolwarm\", as_cmap=True)\n",
+    "    )\n",
+    "axes[1].set_title(\"difference\")\n",
+    "\n",
+    "seaborn.heatmap(\n",
+    "        ax=axes[2],\n",
+    "        data=avg_dist[avg_dist['dataset'] == 1].pivot('layer', 'head', \"mean\"),\n",
+    "        cmap=seaborn.light_palette(\"seagreen\", as_cmap=True)\n",
+    "    )\n",
+    "axes[2].set_title(\"dataset B\")\n",
+    "\n",
+    "matplotlib.pyplot.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The distances again, but with the heads sorted by the distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = matplotlib.pyplot.subplots(1, 2, figsize=(20, 12), sharey=True)\n",
+    "fig.suptitle('average {distance} per head for two datasets, with the heads sorted per layer')\n",
+    "\n",
+    "seaborn.heatmap(\n",
+    "        ax=axes[0],\n",
+    "        data=sorted_avg_dist[sorted_avg_dist['dataset'] == 0].pivot('layer', 'sorted_head', \"mean\"),\n",
+    "        cmap=seaborn.light_palette(\"seagreen\", as_cmap=True)\n",
+    "    )\n",
+    "axes[0].set_title(\"dataset A\")\n",
+    "\n",
+    "seaborn.heatmap(\n",
+    "        ax=axes[1],\n",
+    "        data=sorted_avg_dist[sorted_avg_dist['dataset'] == 1].pivot('layer', 'sorted_head', \"mean\"),\n",
+    "        cmap=seaborn.light_palette(\"seagreen\", as_cmap=True)\n",
+    "    )\n",
+    "axes[1].set_title(\"dataset B\")\n",
+    "\n",
+    "matplotlib.pyplot.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### and plots showing the distribution of the distance values\n",
+    "\n",
+    "First with the heads in model-order, and then again with the heads sorted by average distance.\n",
+    "\n",
+    "These are **really** slow, so you may want to skip running them (each cell took half an hour on my laptop)"
    ]
   },
   {
@@ -389,27 +447,17 @@
     "    v = seaborn.violinplot(y=y,x=\"layer\", hue=\"dataset\", split=True, **kwargs)\n",
     "    data = kwargs['data']\n",
     "    for dataset in range(2):\n",
-    "        median_k = np.median(data[data['dataset'] == dataset][y])\n",
-    "        mean = np.mean(data[data['dataset'] == dataset][y])\n",
-    "        v.text(-0.4 + (dataset * 0.5), 10, str(median_k), fontdict=dict(color=\"red\", fontsize=30))\n",
+    "        mean = np.round(np.mean(data[data['dataset'] == dataset][y]), 2)\n",
+    "        v.text(-0.4 + (dataset * 0.5), 10, str(mean), fontdict=dict(color=\"red\", fontsize=30))\n",
     "    return v\n",
     "g = seaborn.FacetGrid(data_sh, col=\"head\",  row=\"layer\", col_order=(np.arange(h) + 1), row_order=np.flip(np.arange(l) + 1))\n",
-    "g.map_dataframe(make_violin, \"value\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### And the heads per layer sorted by the median k, like in the hopfield networks paper"
+    "g.map_dataframe(make_violin, \"mean\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "g = seaborn.FacetGrid(data_sh, col=\"sorted_head\",  row=\"layer\", col_order=(np.arange(h) + 1), row_order=np.flip(np.arange(l) + 1))\n",
