Remove starting quotes too

--- a/load_hp_fmri_dataset_transformers.ipynb
+++ b/load_hp_fmri_dataset_transformers.ipynb
@@ -173,6 +173,8 @@
     "#        print(word, sent)\n",
     "        if word == \".\":\n",
     "            continue\n",
+    "        if word[0] == '\"':\n",
+    "            word = word[1:]\n",
     "        if word[-1] == '\"':\n",
     "            word = word[:-1]\n",
     "        if word[-1] in [\".\", \"!\", \"?\"]:\n",
