Make it work with GPT2 models too

--- a/load_hp_fmri_dataset_transformers.ipynb
+++ b/load_hp_fmri_dataset_transformers.ipynb
@@ -19,9 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "5FijfxKnFYMu"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from google.colab import drive\n",
@@ -36,10 +34,15 @@
     "import torch\n",
     "import transformers\n",
     "#from transformers import AutoModelForSequenceClassification\n",
-    "from transformers import AutoModelForMaskedLM\n",
+    "from transformers import AutoModel, AutoModelForMaskedLM\n",
     "from transformers import AutoTokenizer\n",
     "#from tokenizers import Regex, Sequence\n",
-    "#from tokenizers.pre_tokenizers import Split\n"
+    "#from tokenizers.pre_tokenizers import Split\n",
+    "\n",
+    "\n",
+    "from IPython.display import display, Markdown\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn"
    ]
   },
   {
@@ -97,12 +100,18 @@
    },
    "outputs": [],
    "source": [
-    "pretrained_weights = 'distilbert-base-uncased'\n",
-    "model = AutoModelForMaskedLM.from_pretrained(pretrained_weights,\n",
-    "                                             output_hidden_states=True,\n",
-    "                                             output_attentions=True)\n",
+    "pretrained_weights = 'gpt2'\n",
+    "#pretrained_weights = 'distilbert-base-uncased'\n",
+    "model = AutoModel.from_pretrained(pretrained_weights,\n",
+    "                                  output_hidden_states=True,\n",
+    "                                  output_attentions=True)\n",
     "#nopunct = Split(Regex(\"\\p{Punctuation}\"), \"removed\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(pretrained_weights, use_fast=True)\n",
+    "if pretrained_weights in ['gpt2', 'gpt2-medium', 'gpt2-large']:\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(pretrained_weights, use_fast=True, add_prefix_space=True)\n",
+    "    tokenizer.pad_token = tokenizer.eos_token\n",
+    "else:\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(pretrained_weights, use_fast=True)\n",
+    "\n",
     "#existing = tokenizer.backend_tokenizer.pre_tokenizer\n",
     "#tokenizer.backend_tokenizer.pre_tokenizer = Sequence([nopunct, existing])"
    ]
@@ -209,7 +218,7 @@
     },
     "id": "FwSP7D8oq-c_",
     "outputId": "0b10bcfc-5948-4db2-8b88-b143665f383f",
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -282,11 +291,15 @@
     "    \"\"\" Push input IDs through model. Stack and sum `layers` (last four by default).\n",
     "        Select only those subword token outputs that belong to our word of interest\n",
     "        and average them.\"\"\" \n",
-    " \n",
     "    token_len = attention_mask.sum().item()\n",
-    "    word_indices = np.array(list(map(lambda e: -1 if e is None else e, word_ids)))[1:token_len - 1]\n",
-    "    word_groups = np.split(np.arange(word_indices.shape[0]) + 1, np.unique(word_indices, return_index=True)[1])[1:]\n",
-    "\n",
+    "    if pretrained_weights in ['gpt2', 'gpt2-medium', 'gpt2-large']:\n",
+    "        word_indices = np.array(list(map(lambda e: -1 if e is None else e, word_ids)))[:token_len]\n",
+    "#        print(word_indices)\n",
+    "        word_groups = np.split(np.arange(word_indices.shape[0]), np.unique(word_indices, return_index=True)[1])[1:]\n",
+    "#        print(word_groups)\n",
+    "    else:\n",
+    "        word_indices = np.array(list(map(lambda e: -1 if e is None else e, word_ids)))[1:token_len - 1]\n",
+    "        word_groups = np.split(np.arange(word_indices.shape[0]) + 1, np.unique(word_indices, return_index=True)[1])[1:]\n",
     "    # Stack all words in the sentence\n",
     "    sent_tokens_output = torch.stack([\n",
     "        # Sum the requested layers\n",
@@ -321,7 +334,7 @@
     "            [\n",
     "                get_word_vectors(model, si, sm, sa, sw, [1])\n",
     "                    for sw, sm , si, sa in zip(word_ids, mask, input_ids, activations)\n",
-    "                            if sm.sum().item() > 2\n",
+    "                            if pretrained_weights in ['gpt2', 'gpt2-medium', 'gpt2-large'] or sm.sum().item() > 2\n",
     "\n",
     "            ]\n",
     "        )\n",
@@ -452,6 +465,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp_features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -500,51 +522,6 @@
    "outputs": [],
    "source": [
     "print(train_features.shape, test_features.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "768 * 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subject_data.shape[0] * 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_ind.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nlp_features.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_indicator.shape"
    ]
   },
   {
@@ -824,15 +801,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stats.pearsonr?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -889,7 +857,17 @@
     "for subject in subjects:\n",
     "    subject_data_dict[subject] = np.load(f'{base_dir}/data_subject_{subject}.npy')\n",
     "\n",
-    "dot_product_rsa_for_lists_of_reps(subject_data_dict.values())"
+    "results = dot_product_rsa_for_lists_of_reps(subject_data_dict.values())\n",
+    "for heading, result in zip([\"### original\", \"### my_pearson_rsa\", \"### p-values\"], results):\n",
+    "    np.fill_diagonal(result, 0)\n",
+    "    display(Markdown(heading))\n",
+    "    display(result)\n",
+    "#    result = result.round(3)\n",
+    "    # put zeros on the diagonal to make the differences between the values stand out more\n",
+    "    # this exaggerates the differences\n",
+    "    np.fill_diagonal(result, 0)\n",
+    "    seaborn.heatmap(data=result, cmap=seaborn.color_palette(\"coolwarm\", as_cmap=True))\n",
+    "    plt.show()"
    ]
   }
  ],
