Put the list of layers to use in a parameter

--- a/load_hp_fmri_dataset_transformers.ipynb
+++ b/load_hp_fmri_dataset_transformers.ipynb
@@ -322,6 +322,7 @@
    },
    "outputs": [],
    "source": [
+    "layers_of_interest = [9,10,11,12] #@param \n",
     "nlp_features = None\n",
     "for batch, input_dict in enumerate(dl):\n",
     "    word_ids = input_dict.pop('word_ids')\n",
@@ -332,7 +333,7 @@
     "    activations = torch.transpose(torch.stack(output.hidden_states), 0, 1)\n",
     "    result = np.concatenate(\n",
     "            [\n",
-    "                get_word_vectors(model, si, sm, sa, sw, [1])\n",
+    "                get_word_vectors(model, si, sm, sa, sw, layers_of_interest)\n",
     "                    for sw, sm , si, sa in zip(word_ids, mask, input_ids, activations)\n",
     "                            if pretrained_weights in ['gpt2', 'gpt2-medium', 'gpt2-large'] or sm.sum().item() > 2\n",
     "\n",
