Update to allow any number of head groups
Dynamically size the plot for any number of head groups. Tries to keep
the resulting plot square. Of course, if you put in too many groups, the
resulting subplots will be so small as to be unreadable

--- a/dissimilarity_matrices_for_contextualized_word_embeddings-for_heads.ipynb
+++ b/dissimilarity_matrices_for_contextualized_word_embeddings-for_heads.ipynb
@@ -194,6 +194,7 @@
     "def get_head_data(wrapper_cache, layer, head):\n",
     "    layer_name, wrapper, orig = wrapper_cache[layer]\n",
     "    value = wrapper.data_store[-1]\n",
+    "    # FIXME: currently assuming 12 heads\n",
     "    parts = np.split(value, 12, axis=2)\n",
     "    result = parts[head-1]\n",
     "#    print(result.shape)\n",
@@ -260,9 +261,10 @@
     "\n",
     "of_interest = [\n",
     "        [(1,1),(1,2),(1,3)],\n",
-    "        [(4,1)],\n",
+    "#        [(4,1)],\n",
     "        [(8,2)],\n",
-    "        [(12,3)]\n",
+    "        [(12,3)],\n",
+    "#        [(12,1),(12,2),(12,3),(12,4),(12,5),(12,6),(12,7),(12,8),(12,9),(12,10),(12,11),(12,12)],\n",
     "    ]\n",
     "\n",
     "wrapper_cache = {}\n",
@@ -294,8 +296,6 @@
     "    for n, head_group in enumerate(of_interest):\n",
     "        sent_vec = combine_output_for_layers(model, inputs, wrapper_cache, word_groups, head_group)\n",
     "        group_result[n].append(sent_vec)\n",
-    "#    for layer_name, wrapper, orig in wrapper_cache.values():\n",
-    "#        wrapper.data_store = []\n",
     "\n",
     "vecs = [np.concatenate(r) for r in group_result.values()]\n",
     "\n",
@@ -339,32 +339,37 @@
    "source": [
     "labels = list(itertools.chain.from_iterable(sent_words))\n",
     "\n",
-    "plot_data = [\n",
-    "    (\"y\", 0, \"transformer layer 1, heads 1-3\"),\n",
-    "    (\"\", 1, \"transformer layer 4, head 1\"),\n",
-    "    (\"xy\", 2, \"transformer layer 8, head 2\"),\n",
-    "    (\"x\", 3, \"transformer layer 12, head 3\"),\n",
-    "]\n",
+    "count = len(distance_matrices)\n",
+    "rows = np.ceil(np.sqrt(count)).astype(int)\n",
+    "cols = np.ceil(count / rows).astype(int)\n",
     "\n",
+    "plot_x_size = 18\n",
+    "plot_y_size = plot_x_size / cols * rows\n",
     "\n",
-    "fig, axes = plt.subplots(nrows=2, ncols=2, figsize=(18, 18))\n",
+    "fig, axes = plt.subplots(nrows=rows, ncols=cols, figsize=(plot_x_size, plot_y_size))\n",
     "fig.suptitle('(euclidean) distance matrices between the embeddings for each word in the sentence')\n",
     "\n",
-    "for subplot, (label_axes, matrix_index, title) in zip(itertools.chain.from_iterable(axes), plot_data):\n",
-    "    heatmap_args = dict(\n",
-    "        linewidth=1, \n",
-    "        annot = np.array([[f\"{v:.0f}\" if (v == 0 or len(str(v)) > 4) else f\"{v:.1f}\" for v in r] for r in distance_matrices[matrix_index]]),\n",
-    "        annot_kws={\"size\":8}, \n",
-    "        fmt=\"\",\n",
-    "        cmap = 'magma_r', \n",
-    "        xticklabels=labels, \n",
-    "        yticklabels=labels,\n",
-    "    )\n",
+    "for n, (matrix, subplot) in enumerate(itertools.zip_longest(distance_matrices, itertools.chain.from_iterable(axes))):\n",
+    "    if matrix is not None:\n",
+    "        heatmap_args = dict(\n",
+    "            linewidth=1, \n",
+    "            annot = np.array([[f\"{v:.0f}\" if (v == 0 or len(str(v)) > 4) else f\"{v:.1f}\" for v in r] for r in matrix]),\n",
+    "            annot_kws={\"size\":8}, \n",
+    "            fmt=\"\",\n",
+    "            cmap = 'magma_r', \n",
+    "            xticklabels=labels, \n",
+    "            yticklabels=labels,\n",
+    "        )\n",
     "\n",
-    "    heatmap = sns.heatmap(distance_matrices[matrix_index], ax=subplot, **heatmap_args)\n",
-    "    subplot.set_title(title)\n",
-    "    for axis in [x for x in \"xy\" if x not in label_axes]:\n",
-    "        getattr(subplot, f\"{axis}axis\").set_visible(False)\n",
+    "        heatmap = sns.heatmap(matrix, ax=subplot, **heatmap_args)\n",
+    "        title = f\"transformer layer {', '.join(list(set(str(t[0]) for t in of_interest[n])))} — head(s) {', '.join([str(t[1]) for t in of_interest[n]])}\"\n",
+    "        subplot.set_title(title)\n",
+    "        if n % cols != 0:\n",
+    "            subplot.yaxis.set_visible(False)\n",
+    "        if n < count - cols:\n",
+    "            subplot.xaxis.set_visible(False)\n",
+    "    else:\n",
+    "        subplot.set_visible(False)\n",
     "fig.tight_layout()\n",
     "plt.show()\n"
    ]
