Set to_pos to `SELF` for "self-attention" combos
For the attention a token has for itself, set the to_pos value
to `SELF` so it doesn't get counted when summing the attention for
a combination (e.g. NOUN->NOUN)

TODO: also mark up attention between tokens of the same word
differently?

--- a/partofspeech_corpus-interactive.ipynb
+++ b/partofspeech_corpus-interactive.ipynb
@@ -137,7 +137,7 @@
    "source": [
     "#poslist = [\"[CLS]\", \"[SEP]\", \"CCONJ\", \"PROPN\", \"PRON\", \"AUX\", \"VERB\", \"ADP\", \"NOUN\", \"SYM\", \"NUM\", \"DET\", \"PUNCT\"]\n",
     "poslist = [\n",
-    "\n",
+    "    \"SELF\",\n",
     "    \"[CLS]\",\n",
     "    \"[SEP]\",\n",
     "#    \"\",\n",
@@ -191,10 +191,30 @@
     "    result = tokenizer(doc.text, return_special_tokens_mask=True, return_offsets_mapping=True)\n",
     "    all_tokens = result.tokens()\n",
     "    docpos = [\"[CLS]\"] + [doc[t].pos_ for t in result.word_ids()[1:-1]] + [\"[SEP]\"]\n",
-    "    index = pandas.MultiIndex.from_product([numpy.arange(12)+1, numpy.arange(12)+1, all_tokens, all_tokens], names=['layer','head','from','to'])\n",
-    "    score_df = pandas.DataFrame(numpy.hstack([scores_matrix.reshape(-1, 1), rollout_matrix.reshape(-1,1), att_matrix.reshape(-1,1)]),index=index, columns=[\"valuezeroing\", \"rollout_vz\", \"raw_attention\"]).reset_index()\n",
-    "    score_df['from_pos'] = pandas.Categorical(numpy.tile(numpy.repeat(numpy.array(docpos), len(all_tokens)), 12*12), categories=poslist)\n",
-    "    score_df['to_pos'] = pandas.Categorical(numpy.tile(numpy.array(docpos), len(all_tokens)*12*12), categories=poslist)\n",
+    "    index = pandas.MultiIndex.from_product(\n",
+    "            [numpy.arange(12)+1, numpy.arange(12)+1, all_tokens, all_tokens],\n",
+    "            names=['layer','head','from', 'to']\n",
+    "        )\n",
+    "    score_df = pandas.DataFrame(\n",
+    "            numpy.hstack([\n",
+    "                    scores_matrix.reshape(-1, 1),\n",
+    "                    rollout_matrix.reshape(-1,1),\n",
+    "                    att_matrix.reshape(-1,1)\n",
+    "                ]),\n",
+    "            index=index,\n",
+    "            columns=[\"valuezeroing\", \"rollout_vz\", \"raw_attention\"]\n",
+    "        ).reset_index()\n",
+    "    score_df['from_pos'] = pandas.Categorical(\n",
+    "            numpy.tile(numpy.repeat(numpy.array(docpos), len(all_tokens)), 12*12),\n",
+    "            categories=poslist\n",
+    "        )\n",
+    "    score_df['to_pos'] = pandas.Categorical(\n",
+    "            numpy.tile(numpy.array(docpos), len(all_tokens)*12*12),\n",
+    "            categories=poslist\n",
+    "        )\n",
+    "    score_df['from_ix'] = numpy.tile(numpy.repeat(numpy.arange(len(all_tokens)), len(all_tokens)), 12*12)\n",
+    "    score_df['to_ix'] = numpy.tile(numpy.arange(len(all_tokens)), len(all_tokens)*12*12)\n",
+    "    score_df['to_pos'] = score_df.apply(lambda r: \"SELF\" if r['from_ix'] == r['to_ix'] else r['to_pos'], axis=1)\n",
     "    score_df['sent'] = i\n",
     "    counts = ((score_df[(score_df['layer'] == 1) & (score_df['head'] == 1)]\n",
     "                    .groupby([\"from_pos\", \"to_pos\"])\n",
